--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ body {
     font-family: "Verdana";
     text-align: center;
 }
-.attribution {
-    background-color: white;
+.picture {
+    width: 95px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
 }
